--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@ctx-core/event",
 	"version": "3.1.17",
 	"description": "ctx-core event",
+	"type": "module",
 	"main": "lib.js",
 	"module": "lib.js",
 	"types": "lib.ts",
