--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-	"name": "@ctx-core/event",
-	"version": "3.1.33",
-	"description": "ctx-core event",
-	"keywords": [
-		"ctx-core",
-		"event"
-	],
-	"homepage": "https://github.com/ctx-core/event#readme",
-	"bugs": {
-		"url": "https://github.com/ctx-core/event/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/ctx-core/event/issues"
-	},
-	"license": "Apache-2.0",
-	"author": "Brian Takita",
-	"main": "./index.js",
-	"module": "./index.js",
-	"types": "./index.ts",
-	"scripts": {
-		"build": "npm run clean && npm run compile",
-		"clean": "rm -f tsconfig.tsbuildinfo",
-		"compile": "tsc -b",
-		"exec": "$@",
-		"prepublishOnly": "npm run compile"
-	},
-	"devDependencies": {
-		"typescript": "^4.0.2"
-	},
-	"publishConfig": {
-		"access": "public"
-	},
-	"gitHead": "53c38fba66ea4e954524818084a218aab3a68ce5"
+  "name": "@ctx-core/event",
+  "version": "3.1.34",
+  "description": "ctx-core event",
+  "keywords": [
+    "ctx-core",
+    "event"
+  ],
+  "homepage": "https://github.com/ctx-core/event#readme",
+  "bugs": {
+    "url": "https://github.com/ctx-core/event/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ctx-core/event/issues"
+  },
+  "license": "Apache-2.0",
+  "author": "Brian Takita",
+  "main": "./index.js",
+  "module": "./index.js",
+  "types": "./index.ts",
+  "scripts": {
+    "build": "npm run clean && npm run compile",
+    "clean": "rm -f tsconfig.tsbuildinfo",
+    "compile": "./node_modules/.bin/tsc -b",
+    "exec": "$@",
+    "prepublishOnly": "npm run compile"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "53c38fba66ea4e954524818084a218aab3a68ce5"
 }
