--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/dom-event",
-	"version": "9.0.27",
+	"version": "9.0.28",
 	"description": "ctx-core dom event",
 	"keywords": [
 		"ctx-core",
@@ -40,5 +40,6 @@
 	"publishConfig": {
 		"access": "public",
 		"cache": "~/.npm"
-	}
+	},
+	"svelte": "./dist/index.js"
 }
